# BurpAI

./: .env.example  .gitignore  AI_VALIDATION_WORKFLOW.md  CLAUDE_DESKTOP_SETUP.md  FEATURES.md  LICENSE  MCP_WORKFLOWS.md  README.md  pyproject.toml  start_mcp_server.bat  test_api.py  test_get_issues.py
burp_cli/: __init__.py
burp_cli/api/: __init__.py  client.py  exceptions.py  models.py
burp_cli/cli/: __init__.py  main.py
burp_cli/mcp_server/: __init__.py  ai_analysis.py  server.py
burp_cli/utils/: __init__.py  config.py  logger.py
burp_cli/validators/: __init__.py  ai_validator.py  base.py
docs/: MCP_TOOLS.md  SETUP.md  burp-api-spec.json
