[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burp-cli"
version = "0.1.0"
description = "AI-Assisted Burp Suite CLI for automated security testing with zero false positives"
authors = [{name = "thehxr1", email = "thehxr1@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["burp", "security", "pentesting", "automation", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.29",
    "anthropic>=0.25.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
burp-cli = "burp_cli.cli.main:app"
burp-mcp = "burp_cli.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/thehxr1/burpAI"
Repository = "https://github.com/thehxr1/burpAI"
Issues = "https://github.com/thehxr1/burpAI/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["burp_cli*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=burp_cli --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
